--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,26 @@ h2 {
     font-weight: bold;
     margin-bottom: 10px;
 }
+.card-list {
+    display: flex;
+    margin: auto;
+    max-width: 800px;
+}
+.card {
+    width: 33%;
+    margin: 20px;
+}
+.card img {
+    width: 100%;
+    height: 80%;
+    margin-bottom: 20px;
+    object-fit: cover;
+}
+.footer {
+    margin-top: 100px;
+    margin-bottom: 15px;
+}
+.copy {
+    font-size: 0.5rem;
+    text-align: center;
+}
